<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainPage">

    <LinearLayout
        android:id="@+id/mainbody"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f0f0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/parentMenuMain"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/parentmainpart"
                android:orientation="horizontal">

                <RadioGroup
                    android:layout_marginTop="5dp"
                    android:id="@+id/buttonGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ButtonNearly"
                        android:button="@null"
                        android:text="@string/book_recently"
                        android:textColor="#9d9d9d"
                        android:textSize="11sp"
                        android:drawableTop="@drawable/recentbackground"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:background="@null"

                        android:layout_weight="1" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/charts"
                        android:button="@null"
                        android:text="@string/charts"
                        android:textColor="#9d9d9d"
                        android:textSize="11sp"
                        android:drawableTop="@drawable/createbackground"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:background="@null"

                        android:layout_weight="1" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ButtonPush"
                        android:button="@null"
                        android:text="@string/push_in"
                        android:textColor="#9d9d9d"
                        android:textSize="11sp"
                        android:drawableTop="@drawable/pushbackground"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:background="@null"

                        android:layout_weight="1" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ButtonMe"
                        android:button="@null"
                        android:text="@string/user_life"
                        android:textColor="#9d9d9d"
                        android:textSize="11sp"
                        android:drawableTop="@drawable/mebackground"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:background="@null"

                        android:layout_weight="1" />

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ButtonTool"
                        android:button="@null"
                        android:text="@string/setting_tool"
                        android:textColor="#9d9d9d"
                        android:textSize="11sp"
                        android:drawableTop="@drawable/toolbackground"
                        android:layout_marginTop="2dp"
                        android:gravity="center"
                        android:background="@null"

                        android:layout_weight="1" />

                </RadioGroup>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="#f0f0f0"></View>

            <RelativeLayout
                android:id="@+id/parentMenuShader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:background="@drawable/parentmenushader">
                <LinearLayout
                    android:layout_width="40dp"
                    android:layout_height="4dp"
                    android:orientation="horizontal"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="2dp"
                    android:layout_marginBottom="2dp"
                    >
                    <ImageView
                        android:id="@+id/nearlypoint"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:background="@drawable/greeypoint"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <ImageView
                        android:id="@+id/newcreatepoint"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:background="@drawable/greeypoint"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <ImageView
                        android:id="@+id/pushpoint"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:background="@drawable/greeypoint"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <ImageView
                        android:id="@+id/mepoint"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:background="@drawable/greeypoint"
                        android:layout_weight="1"
                        />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"/>
                    <ImageView
                        android:id="@+id/toolpoint"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:background="@drawable/greeypoint"
                        android:layout_weight="1"
                        />
                    </LinearLayout>
                </RelativeLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <android.support.v4.view.ViewPager
                android:id="@+id/MainBodyDiv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/yinhe"
                android:layout_marginTop="40dp"
                android:layout_weight="1"

                >

                </android.support.v4.view.ViewPager>

            <!--<RelativeLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_marginTop="40dp"-->
                <!--android:layout_weight="1"-->
                <!--android:background="@drawable/parentmainpart">-->


            <!--</RelativeLayout>-->



        </LinearLayout>


    </LinearLayout>

</RelativeLayout>
